css/styles.css
/* ... */
.footer-contact,
.footer-contact small,
.footer-contact h2 {
  line-height: 1;
}

.subtitle {
  font-size: 0.875rem;
  color: rgb(255 255 255 / 50%);
  margin: 0;
}

.logo {
  font-size: 1rem;
  letter-spacing: 0.2rem;
  text-decoration: none;
  position: relative;
}

.logo .subtitle {
  letter-spacing: 0.175rem;
}

.logo a::after {
  content: "";
  position: absolute;
  z-index: 10;
  inset: 0;
}

.mobile-menu-toggle {
  display: none;
}

.menu {
  display: flex;
  gap: 2rem;
  align-items: center;
  flex-wrap: nowrap;
  margin-left: 3rem;
  letter-spacing: 0.0875rem;
  text-align: right;
}

/* HERO SHOWREEL */
.hero {
  position: relative;
  width: 100%;
  overflow: hidden;
}

.hero .overlay {
  position: absolute;
  bottom: 2.5rem;
  width: 100%;
  text-align: center;
}

.showreel-button {
  cursor: pointer;
  position: relative;
  background-color: #141414;
  color: inherit;
  border: none;
  border-radius: 0.5rem;
  display: inline-flex;
  width: fit-content;
  padding: 0.5rem 1rem 0.5rem 0.5rem;
  align-items: center;
  gap: 0.75rem;
  font-size: 1.5rem;
  font-weight: 700;
}

.showreel {
  aspect-ratio: 2.25 / 1;
}

/* Hide mobile video on desktop */
.showreel .showreel-preview-mobile {
  display: none;
}

.showreel video,
.showreel iframe {
  display: block;
  width: 100%;
  height: 100%;
  border: none;
  object-fit: cover;
}

/* Display video embed above header to uncover player controls */
.showreel iframe {
  position: relative;
  z-index: 999999;
}

/* HIRE SECTION */
.hire {
  background-color: #100f0f;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.hire-text {
  flex: 1;
  padding: 3.75rem;
}

.btn {
  display: inline-block;
  padding: 0.75em;
  border: 1px solid #fff;
  color: inherit;
  background-color: inherit;
  text-decoration: none;
  font-size: 1rem;
  transition: background-color 0.3s ease, color 0.3s ease;
}

.btn:hover {
  background: #fff;
  color: #141414;
}

/* PORTRAIT */
.hire-image {
  flex: 1;
  max-width: 22rem;
}

.hire-image img {
  display: block;
  width: 100%;
  height: auto;
  padding: 0;
}

/* CATEGORY LAYOUT */
.categories {
  display: flex;
  grid-template-columns: 2fr 1fr;
  justify-content: center;
  gap: 10rem;
  margin: 6.75rem 0;
}

.cat-block {
  position: relative;
  text-align: left;
  margin: 0;
  height: fit-content;
}

.cat-block-cinema {
  flex: 2;
}

.cat-block-photo {
  flex: 1;
}
  
/* Make entire category card clickable */
.cat-block a::after {
  content: "";
  position: absolute;
  z-index: 10;
  inset: 0;
}

.cat-title {
  font-size: 2.5rem;
  font-weight: 700;
  padding-bottom: 0.5rem;
  width: 100%;
  overflow: hidden;
}

.cat-title-inner {
  display: block;
  width: fit-content;
}

/* Category card title line */
.cat-title-inner > span {
  position: relative;
  display: block;
  margin: 0;
}

.cat-title-inner > span::after {
  content: "";
  position: absolute;
  margin-left: 1rem;
  top: 55%;
  width: 200vw;
  height: 1px;
  background: rgb(255 255 255 / 75%);
}

.cat-img {
  display: block;
  width: 100%;
  margin-bottom: 1em;
}

/* ACTIVE NAV UNDERLINE */
.menu .active span {
  position: relative;
}

.menu .active span::after {
  content: "";
  display: block;
  position: absolute;
  left: 0;
  width: 100%;
  border-bottom: 1px solid #fff;
}

/* FOOTER */
.footer {
  text-transform: uppercase;
  display: flex;
  justify-content: space-between;
  gap: 2.5rem;
  align-items: center;
  padding: 3.75em;
  border-top: 1px solid rgb(255 255 255 / 10%);
  font-size: 0.875rem;
  font-weight: 500;
}

.footer .copyright {
  font-size: 1em;
  letter-spacing: 0.175rem;
}

.footer .copyright .subtitle {
  color: #fff;
  letter-spacing: normal;
  margin-right: 0.33rem;
}

.footer-contact {
  display: flex;
  justify-content: flex-end;
  text-align: right;
  flex: 1;
  gap: 3em;
}

.category-title {
  width: 100%;
  overflow: hidden;
  margin: 2rem 0;
}

.category-title-inner {
  display: block;
  width: fit-content;
  margin: 0 auto;
}

.category-title h2 {
  position: relative;
  display: inline-block;
  text-align: center;
  font-size: 1rem;
  font-weight: 300;
  text-transform: uppercase;
  letter-spacing: 0.1rem;
  margin: 0;
}

.category-title h2::before,
.category-title h2::after {
  content: "";
  position: absolute;
  top: 55%;
  width: 200vw;
  display: inline-block;
  height: 1px;
  background-color: rgb(255 255 255 / 50%);
}

.category-title h2::before {
  right: 100%;
  margin-right: 1.2rem;
}

.category-title h2::after {
  left: 100%;
  margin-left: 1.2rem;
}

.project {
  margin-bottom: 7.5rem;
  border-top: 1px solid rgb(255 255 255 / 50%);
}

.project:first-of-type {
  margin-top: 0;
  padding-top: 0;
  border-top: none;
}

.project-section:last-of-type {
  border-bottom: 1px solid rgb(255 255 255 / 50%);
}

.project-lower {
  display: flex;
  justify-content: space-between;
  align-items: flex-start; /* IMPORTANT: title higher feel */
  margin-top: 2rem;
  gap: 1rem;
}

/* TEXT SIDE */
.project-text {
  flex: 1;
}

.project-text p {
  margin-top: 0;
  margin-right: 1rem;
}

.project-heading h3 {
  margin: 0;
  margin-top: 2.5rem;
}

/* IMAGE SIDE BIGGER */
.project-image {
  flex: 1.2; /* makes image bigger than text */
}

.project-image img {
  width: 100%;
  height: auto;
  display: block;
}

.project-title {
  margin-bottom: 2rem;
}

.project-subtitle {
  display: inline-block;
  font-size: 0.5em;
  font-weight: 300;
}

.project-info {
  margin: 3.25rem 0;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 5rem;
}

.project-info h2 {
  text-align: right;
  margin: 0;
  font-weight: 300;
  line-height: 1;
}

.project-desc p {
  margin-top: 0;
  margin-bottom: 0;
}

.project-desc p::after {
  content: "–";
  display: block;
  color: rgb(255 255 255 / 50%);
  margin: 0.25rem 0;
}

.project-desc p:last-of-type::after {
  content: none;
}

.project-gallery-images {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 2rem;
}
/* ... */

